# Advent-of-code-25

./: .gitignore  README.md
day01/: Cargo.toml
day02/: Cargo.toml
day03/: Cargo.toml
day04/: Cargo.toml
day05/: Cargo.toml
day06/: Cargo.toml
day07/: Cargo.toml
day08/: Cargo.toml
day09/: Cargo.toml
day11/: Cargo.toml
template/: Cargo.toml  cargo-generate.toml
